<resources>
    <string name="app_name">Coffeelicious</string>

    <string name="greentea">Green Tea. Blended with mint,
    lemongrass and lemon verbena, then sweetened just right and given a good shake with ice, so-refreshing!</string>

    <string name="latte">A neat twist that can be done with any of the new Teavana teas is called a tea latte.
    Basically, a tea latte is equal parts hot tea and steamed milk.  </string>

    <string name="orangesmoothie">Starbucks Orange Mango Smoothie. A nourishing blend of natural orange mango juice,
    a whole banana, milk, whey protein, and fiber powder and ice.</string>

    <string name="orangevanilla">Vanilla Bean Crème Frappuccino® Blended Beverage. This rich and creamy blend of vanilla bean, milk and ice topped with
    whipped cream takes va-va-vanilla flavor to another level.</string>

    <string name="cappcuni">By Starbucks definition, a cappuccino is mostly milk foam, which weighs a lot less than milk. … More specifically, a
    cappuccino is made up of shots of espresso, half steamed milk (2% by default,) </string>

    <string name="thaitea">Thai Tea is made from strongly-brewed black tea, often spiced with ingredients such as star anise,
    crushed tamarind, cardamom</string>

    <string name="tea">Right next to water, tea is hailed as the most consumed drink in the world. Every single drop of tea
    comes from the same type of plant</string>

    <string name="bubbletea">Bubble Tea is the name given to the wide variety of refreshing flavoured
    fruit teas and milk teas served ice cold or piping hot with chewy
    tapioca balls that you suck up through a big fat straw! .</string>

    <string name="match">Smooth and creamy matcha sweetened just right and served with steamed milk. This
    favorite will transport your senses to pure green delight. </string>
    <string name="drink_name">Drink Name</string>
    <string name="_5_per_cup">$5 per cup</string>
    <string name="_0">0</string>
    <string name="hot">Hot</string>
    <string name="iced">Iced</string>
    <string name="add_extra_cream_2">Add Extra Cream $2</string>
    <string name="toppings_3">Toppings $3</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="clear_the_database">Clear The DATABASE</string>
    <string name="x">x</string>
    <string name="has_topping">has topping</string>
    <string name="has_cream">has cream</string>
    <string name="_10">$10</string>
</resources>