<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".InfoActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="370dp"
        android:id="@+id/firstCardView"
        android:layout_height="320dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_centerHorizontal="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/imageViewInfo"
                android:src="@drawable/greentea"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewInfo"
                android:text="@string/drink_name"
                android:textColor="@android:color/holo_red_light"
                android:textSize="30sp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:id="@+id/drinkNameinInfo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5_per_cup"
                android:textColor="@android:color/holo_red_light"
                android:id="@+id/coffeePrice"
                android:layout_alignEnd="@+id/drinkNameinInfo"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_below="@+id/imageViewInfo" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:id="@+id/secondCardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/firstCardView"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="130dp"
                android:id="@+id/addquantity"
                android:background="@drawable/plus"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/quantity"
                android:textSize="28sp"
                android:layout_toEndOf="@+id/addquantity"/>


            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/subquantity"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/quantity"
                android:background="@drawable/minus"
                tools:ignore="ContentDescription" />


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:id="@+id/radioGroup"
                android:layout_below="@id/subquantity">


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/hotradioButton"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iced"
                    android:id="@+id/coldRadioButton"/>

            </RadioGroup>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup"
                android:id="@+id/addToppings"
                android:text="@string/toppings_3"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addCream"
                android:layout_below="@+id/addToppings"
                android:text="@string/add_extra_cream_2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/greentea"
                android:id="@+id/descriptioninfo"
                android:textStyle="italic"
                android:textSize="15sp"
                android:layout_below="@+id/addCream"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/descriptioninfo"
                android:background="#3F51B5"
                android:textStyle="bold"
                android:id="@+id/addtocart"
                android:textColor="@android:color/white"
                android:text="@string/add_to_cart"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>